Corrected alignment of tooltips

--- a/src/assests/scss/_style.scss
+++ b/src/assests/scss/_style.scss
@@ -9093,3 +9093,7 @@ iframe {
     height: inherit !important;
   }
 }
+.pa-1 {
+  position: absolute;
+  top: 115px;
+}
